latest thandar for confilt

--- a/error/error.html
+++ b/error/error.html
@@ -8,6 +8,6 @@
 <h1>modified error</h1>
 <p>this is my commit.</p>
 <p>pppppp</p>
-<p>thandar commit</p>
+<p>thandar commit modified</p>
   </body>
 </html>
