--- a/error/error.html
+++ b/error/error.html
@@ -13,5 +13,10 @@
     <p>second time</p>
 <p>thandar commit modified</p>
 <h1>this is h1</h1>
+<table>
+  <tr>
+    <td></td>
+  </tr>
+</table>
   </body>
 </html>
